--- a/public/documentation.html
+++ b/public/documentation.html
@@ -47,18 +47,18 @@
         <td>JSON</td>
       <tr>
         <td>Return data about genre(description) by name/title (use %20 for spaces)</td>
-        <td>/movies/genres/:genre</td>
+        <td>/genres/:Genre</td>
         <td>GET</td>
         <td>None</td>
-        <td>/movies/genres/comedy</td>
+        <td>/genres/Comedy</td>
         <td>JSON</td>
       </tr>
       <tr>
         <td>Return data about a director by name (use %20 for spaces)</td>
-        <td>/movies/directors/:name</td>
+        <td>/directors/:name</td>
         <td>GET</td>
         <td>None</td>
-        <td>/movies/directors/Christopher%20Nolan</td>
+        <td>/directors/Christopher%20Nolan</td>
         <td>JSON</td>
       </tr>
       <tr>
