updated documentation with accurate endpoints

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -70,6 +70,14 @@
         <td>JSON</td>
       </tr>
       <tr>
+        <td>Get a user object via their username</td>
+        <td>/users/:username</td>
+        <td>GET</td>
+        <td>None</td>
+        <td>/users/:trevortest</td>
+        <td>JSON</td>
+      </tr>
+      <tr>
         <td>Allow users to update their user information</td>
         <td>/users/:username</td>
         <td>PUT</td>
